objects/EUR_CRM_Visit_Frequency_Criteria__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>Visit_Frequency_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Image_Level__r.EUR_CRM_Name__c)</formula>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>EUR_CRM_Image_Level__c</referenceTo>
        <relationshipName>Visit_Frequency_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Classification_Type__c</fullName>
        <label>Outlet Classification Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Outlet_Classification__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hypermarket</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Estate Supermarket</fullName>
                </value>
                <value>
                    <fullName>Specialist - Std &amp; Premium</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
                <value>
                    <fullName>Kiosk</fullName>
                </value>
                <value>
                    <fullName>Mini Mart</fullName>
                </value>
                <value>
                    <fullName>Petrol Forecourts</fullName>
                </value>
                <value>
                    <fullName>Convenience Store</fullName>
                </value>
                <value>
                    <fullName>Mini Depots - Containers</fullName>
                </value>
                <value>
                    <fullName>Open Market Wholesalers</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Online Store - Specialist Liquor Store</fullName>
                </value>
                <value>
                    <fullName>Online Store - Generalist&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Classification__c</fullName>
        <label>Outlet Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Counter service</fullName>
                </value>
                <value>
                    <fullName>Wholesalers / Distributors</fullName>
                </value>
                <value>
                    <fullName>Non-Conventional&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Type_Name__c</fullName>
        <formula>EUR_CRM_Outlet_Type__r.EUR_CRM_Name__c</formula>
        <label>Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>EUR_CRM_Outlet_Type__c</referenceTo>
        <relationshipName>Visit_Frequency_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Frequency__c</fullName>
        <label>Visit Frequency</label>
        <referenceTo>EUR_CRM_Visit_Frequency__c</referenceTo>
        <relationshipName>Visit_Frequency_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Volume_Potential__r.EUR_CRM_Name__c)</formula>
        <label>Volume Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential</label>
        <referenceTo>EUR_CRM_Volume_Potential__c</referenceTo>
        <relationshipName>Visit_Frequency_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visit Frequency Criteria (EU)</label>
    <nameField>
        <displayFormat>VFC-{00000000}</displayFormat>
        <label>Visit Frequency Criteria No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Frequency Criteria (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_GB_Visit_Frequency_Criteria</fullName>
        <active>true</active>
        <label>GB Visit Frequency Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Visit_Frequency_Criteria_Off_Trade</fullName>
        <active>true</active>
        <label>EUR NG Visit Frequency Criteria Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Visit_Frequency_Criteria_On_Trade</fullName>
        <active>true</active>
        <label>EUR NG Visit Frequency Criteria On Trade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>